[package]
name = "axum-webservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.60" }
axum = { version = "0.5.13", features = ["headers"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
tracing-subscriber = { version = "0.3.15", features = ['env-filter', 'json', 'time'] }
tracing-appender = "0.2.2"
tracing = { version = "0.1.36", features = ["attributes"] }
time = { version = "0.3.14", features = ["serde", "serde-human-readable"] }
